--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Data Analyst Portfolio<br />
+						<h1>Sandra Ozohili Portfolio<br />
 						</h1>
 						<p>Entry-level data analyst proficient in Excel, SQL, Tableau, PowerBi, Python and R.</p>  
 						<p>Guided and personal projects analysis involving data cleaning, exploration, transformation, dashboards and visualizations
